# scp-library

./: .gitignore  README.md  config.yaml  devbox.json  hello.py  package-lock.json  package.json  pyproject.toml
apps/scp-api/: main.py  package.json
apps/scp-api/api/: category.py  health.py
apps/scp-api/core/: configuration.py  database.py
apps/scp-api/models/: base.py  category.py  entity.py  http_response.py  user.py
apps/scp-api/routes/: routes.py
apps/scp-api/services/: category.py
apps/scp-api/services/impl/: category.py
